Fix esri map tool tooltip being hidden by WET style

--- a/src/css/theme-map.less
+++ b/src/css/theme-map.less
@@ -59,37 +59,7 @@
         top: 32px;
         bottom: 0;
         right: 0;
-        left: 0;
-
-        .map > .tooltip {
-            .tool-tooltip {
-                display: none;
-
-                .fa {
-                    margin-right: 5px;
-                }
-            }
-
-            width: auto;
-                padding: 2px 10px;
-                border-radius: 0px;
-                font-size: inherit;
-                box-shadow: rgba(104, 104, 104, 0.74902) 3px 3px 3px 0px;
-                border: 1px solid @medium-grey-color;
-                margin: -4px 0 0 10px;
-
-            &.working {
-                //font-weight: bold;
-                
-                .tool-tooltip {
-                    display: block;
-                }
-
-                .esri-tooltip {
-                    display: none;
-                }	
-            }
-        }
+        left: 0;        
     }
 
     
